--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ djangorestframework==3.11.0
 EditorConfig==0.12.3
 gunicorn==20.1.0
 jsbeautifier==1.14.0
-psycopg2==2.9.2
 PyJWT==2.3.0
 python-decouple==3.5
 pytz==2021.3
@@ -14,3 +13,5 @@ six==1.16.0
 sqlparse==0.4.2
 whitenoise==5.3.0
 djangorestframework-simplejwt==4.2.0
+psycopg2-binary==2.8.6
+tzdata==2020
