--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,4 @@ six==1.16.0
 sqlparse==0.4.2
 whitenoise==5.3.0
 djangorestframework-simplejwt==4.2.0
-psycopg2-binary==2.8.6
-tzdata==2020
+psycopg2==2.8.6
