--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
-asgiref==3.4.1
-dj-database-url==0.5.0
 Django==3.0.8
-django-model-utils==4.0.0
 djangorestframework==3.11.0
+django-model-utils==4.0.0
 djangorestframework-simplejwt==4.2.0
-EditorConfig==0.12.3
-gunicorn==20.1.0
-jsbeautifier==1.14.0
-psycopg2==2.8.6
+psycopg2-binary==2.8.3
 PyJWT==2.3.0
-python-decouple==3.5
 pytz==2021.3
-six==1.16.0
+EditorConfig==0.12.3
+asgiref==3.4.1
 sqlparse==0.4.2
 whitenoise==5.3.0
+six==1.16.0
